hphp/test/slow/array_access/fatal_access/elem_d.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot use a scalar value as an array' in %s/elem_d.php:5
Stack trace:
#0 (): main()
#1 {main}
